ajuste nas classes UserResource e UserResourceTest